# dify_plugin_grounding_with_google_search

./: .gitignore  README.md  pyproject.toml
difypkg/: grounding_with_google_search-0.0.1.difypkg  grounding_with_google_search-0.0.2.difypkg  grounding_with_google_search-0.0.3.difypkg  grounding_with_google_search-0.1.0.difypkg
examples/: 001.grounding_with_google_search.ipynb  002.paerse_result.ipynb  google_search_result.json
grounding_with_google_search/: README.md  manifest.yaml  requirements.txt
grounding_with_google_search/provider/: grounding_with_google_search.py  grounding_with_google_search.yaml
grounding_with_google_search/tools/: grounding_with_google_search.py  grounding_with_google_search.yaml
