[project]
name = "dify-plugin-grounding-with-google-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin>=0.4.3",
    "google-genai>=1.27.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.4",
]
