[project]
name = "dify-plugin-grounding-with-google-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o grounding_with_google_search/requirements.txt
dependencies = [
    "dify-plugin>=0.5.1",
    "google-genai>=1.47.0",
    "loguru>=0.7.3",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jupyterlab-language-pack-zh-cn>=4.4.post0",
    "notebook>=7.4.4",
    "pip>=25.1.1",
    "ruff>=0.14.3",
]
